force-app/main/default/objects/Customer_Complaint__c/Customer_Complaint__c.object-meta.xml
<CustomObject>
    <label>Customer Complaint</label>
    <nameField>
        <label>Customer Complaint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>