force-app/main/default/objects/Customer_Complaint__c/fields/Complaint_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Reason__c</fullName>
    <label>Complaint Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>