force-app/main/default/objects/Customer_Complaint__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <label>Email Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>